# cube-engine

./: .clang-format  .gitignore  CMakeLists.txt  project-name.cbp  run_cmake.sh
Lib/SDL2-2.0.14/: Makefile.rules  config.status  libtool
Lib/SDL2-2.0.14/include/: SDL_config.h
Lib/SDL2-2.0.14/output/lib/pkgconfig/: sdl2.pc
Lib/SDL2-2.0.14/src/hidapi/doxygen/: Doxyfile
Lib/SDL2-2.0.14/src/video/yuv2rgb/: README.md
cmake/: Conan.cmake
logs/: engine_log.txt
src/: CMakeLists.txt  canvas.hpp  cube.hpp  draw.hpp  engine.hpp  error_event.hpp  error_manager.hpp  game_config.hpp  input_manager.cpp  input_manager.hpp  input_manager_events.hpp  main.cpp  pixel.hpp  render_manager.cpp  render_manager.hpp  scene_manager.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  vector2d.hpp  vertex.hpp  window_manager.cpp  window_manager.hpp
src/engine/: CMakeLists.txt  canvas.hpp  draw.hpp  input_manager.hpp  render_manager.hpp  vector2d.hpp  window_manager.hpp
src/graphics/: engine.cpp  engine.hpp  event_handler.cpp  event_handler.hpp  game_scene.cpp  game_scene.hpp  pixel.hpp  render_manager.cpp  render_manager.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  vertex.hpp
src/old/: error_manager.cpp  game_config.hpp  input_manager_events.hpp  main.cpp  pixel.hpp  scene_manager.hpp
src/tools/sprite-editor/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/utils/: cube_exceptions.hpp  logger_manager.cpp  logger_manager.hpp  utils.cpp  utils.hpp  vector2d.hpp  vector3d.hpp
